# rules_rust

./: BUILD.bazel
crate_universe/src/: rendering.rs
docs/: BUILD.bazel  index.md
proto/: proto.bzl
rust/: defs.bzl
rust/private/: providers.bzl  rust.bzl  rustc.bzl  rustdoc.bzl
test/unit/consistent_crate_name/: with_modified_crate_name.bzl
test/unit/force_all_deps_direct/: generator.bzl
